PDF Report edit

--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-12">
             <h1>{{ event.name }} Event Control</h1>
-            {{ event.client }}
+            {{ event.client }}<br>
             Report Produced: {{ "now"|date('Y-m-d H:i:s', "Europe/London") }}
             <h2>Log Entry (ID: {{ entry.id }})</h2>
         </div>
