--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -63,7 +63,8 @@
                         <br>
                         <strong>Medical Treatment:</strong> {{ medical.medicalTreatment }}
                         <br>
-                        <strong>Medical Resolution:</strong> {{ medical.medicalResolution }}
+                        <strong>Medical Resolution:</strong><br>
+                        {{ medical.medicalResolution }}
                         <br>
                         <strong>Notes:</strong><br>
                         {{ medical.medicalNotes }}
