Created pdf fire register

--- a/app/Resources/views/fireRegister.html.twig
+++ b/app/Resources/views/fireRegister.html.twig
@@ -44,6 +44,10 @@ Event Control Fire Register
                                         <a href="{{ path('signout', {'id': 'all'}) }}" class="btn btn-warning btn-block">
                                            Sign All Out
                                         </a>
+                                        <br>
+                                        <a href="{{ path('pdf_fire_register' }}" class="btn btn-warning btn-block">
+                                           Generate PDF Fire Register
+                                        </a>
                                     </div> 
                         {% endif %}  
                     </div>
