Fire Register fix

--- a/app/Resources/views/fireRegister.html.twig
+++ b/app/Resources/views/fireRegister.html.twig
@@ -45,7 +45,7 @@ Event Control Fire Register
                                            Sign All Out
                                         </a>
                                         <br>
-                                        <a href="{{ path('pdf_fire_register' }}" class="btn btn-warning btn-block">
+                                        <a href="{{ path('pdf_fire_register') }}" class="btn btn-warning btn-block">
                                            Generate PDF Fire Register
                                         </a>
                                     </div> 
