--- a/app/Resources/views/securityForm.twig
+++ b/app/Resources/views/securityForm.twig
@@ -1,77 +1,84 @@
 <div class="row">
     <div class="col-md-12">
-        {{ form_start(security_entry) }}
-            {{ form_errors(security_entry) }}
+        {{ form_start(medical_entry) }}
+            {{ form_errors(medical_entry) }}
             <br>
     </div>
-</div>
-<div class="row">            
-    <div class="col-md-6">
+    <div class="col-md-4">
         <div class="form-group">
-            {{ form_label(security_entry.security_log_type) }} 
-            {{ form_errors(security_entry.security_log_type) }}
-            {{ form_widget(security_entry.security_log_type) }}
+            {{ form_label(medical_entry.medical_reported_injury_type) }} 
+            {{ form_errors(medical_entry.medical_reported_injury_type) }}
+            {{ form_widget(medical_entry.medical_reported_injury_type) }}
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-2">
         <div class="form-group">
-            {{ form_label(security_entry.security_incident_type) }}
-            {{ form_widget(security_entry.security_incident_type) }}
-            {{ form_errors(security_entry.security_incident_type) }}
+            {{ form_label(medical_entry.nine_nine_nine_required) }}
+            {{ form_widget(medical_entry.nine_nine_nine_required) }}
+            {{ form_errors(medical_entry.nine_nine_nine_required) }}
+        </div>
+    </div>
+    <div class="col-md-2">
+        <div class="form-group">
+            {{ form_label(medical_entry.medics_informed) }}
+            {{ form_widget(medical_entry.medics_informed) }}
+            {{ form_errors(medical_entry.medics_informed) }}
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="form-group">
+            {{ form_label(medical_entry.medical_response) }} 
+            {{ form_errors(medical_entry.medical_response) }}
+            {{ form_widget(medical_entry.medical_response) }}
+        </div>
+    </div>
+
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="form-group">
+            {{ form_label(medical_entry.medical_description) }} 
+            {{ form_errors(medical_entry.medical_description) }}
+            {{ form_widget(medical_entry.medical_description) }}
         </div>
     </div>
 </div>
 <div class="row">
     <div class="col-md-12">
         <div class="form-group">
-            {{ form_label(security_entry.security_description) }} 
-            {{ form_errors(security_entry.security_description) }}
-            {{ form_widget(security_entry.security_description) }}
+            {{ form_label(medical_entry.medical_notes) }} 
+            {{ form_errors(medical_entry.medical_notes) }}
+            {{ form_widget(medical_entry.medical_notes) }}
         </div>
     </div>
-</div>        
-<div class="row">        
-    <div class="col-md-2">
-        <div class="form-group">
-            {{ form_label(security_entry.security_dispatched) }}
-            {{ form_widget(security_entry.security_dispatched) }}
-            {{ form_errors(security_entry.security_dispatched) }}
-        </div>
-    </div>
-    <div class="col-md-2">
-        <div class="form-group">
-            {{ form_label(security_entry.security_responded) }}
-            {{ form_widget(security_entry.security_responded) }}
-            {{ form_errors(security_entry.security_responded) }}
-        </div>
-    </div>        
 </div>
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-5">
         <div class="form-group">
-            {{ form_label(security_entry.security_resolution) }} 
-            {{ form_errors(security_entry.security_resolution) }}
-            {{ form_widget(security_entry.security_resolution) }}
+            {{ form_label(medical_entry.medical_treatment) }} 
+            {{ form_errors(medical_entry.medical_treatment) }}
+            {{ form_widget(medical_entry.medical_treatment) }}
         </div>
     </div>
-</div><br>
-{% if securityClosed is not null %}
-    <div class="row">        
-        <div class="col-md-12">
-            <div class="alert alert-info" role="alert">
-                <strong>Incident Closed: </strong>{{ securityClosed|date('Y-m-d H:i:s', "Europe/London") }}
-            </div>
+    <div class="col-md-5">
+        <div class="form-group">
+            {{ form_label(medical_entry.medical_resolution) }} 
+            {{ form_errors(medical_entry.medical_resolution) }}
+            {{ form_widget(medical_entry.medical_resolution) }}
         </div>
-    </div>
-{% endif %} 
-<div class="row">
-    <div class="col-md-10">
-        {{ form_widget(security_entry.submit_security) }}           
-        {{ form_end(security_entry) }}
     </div>
     <div class="col-md-2">
-        <button type="button" id="security_close_button" class="btn btn-warning btn-block">
-            Hide Security
+        <br>
+        <button type="button" class="btn btn-warning btn-block">
+            Close Medical
         </button>
-    </div>        
-</div><br>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <br>
+        {{ form_widget(medical_entry.submit_medical) }}           
+        {{ form_end(medical_entry) }}
+        <br>
+    </div>
+</div>
