Attempt to relate eventid to user

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -3,7 +3,7 @@
         Event Info
     </div>
     <div class="panel-body">
-        <strong>{{ activeEventName() }}</strong>
+        <strong>{{ activeEventName(app.user.id) }}</strong>
         <br>
         User: {{ app.user.username }}
     </div>
