--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -21,35 +21,35 @@
 <a href="{{ path('full_log') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row">
         <div class="col-md-12 col-xs-12">
-            Full Log View <span class="badge" id="logTotal-Total">{{ activeTotalLogs() }}</span>
+            Full Log View <span class="badge" id="logTotal-Total">{{ activeTotalLogs(app.user.id) }}</span>
         </div>
     </div>
 </a>
 <a href="{{ path('sort_filter_log', {'sort': "desc", 'filter': "open"}) }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row">
         <div class="col-md-12 col-xs-12">
-            Latest Open <span class="badge" id="logTotal-Open">{{ activeOpenLogs() }}</span>
+            Latest Open <span class="badge" id="logTotal-Open">{{ activeOpenLogs(app.user.id) }}</span>
         </div>
     </div>
 </a>
 <a href="{{ path('sort_filter_type_log', {'sort': "desc", 'filter': "all", 'filter_type': "medical"}) }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row">
         <div class="col-md-12 col-xs-12">
-            Latest Medical <span class="badge" id="logTotal-Medical">{{ activeMedicalLogs() }}</span>
+            Latest Medical <span class="badge" id="logTotal-Medical">{{ activeMedicalLogs(app.user.id) }}</span>
         </div>
     </div>
 </a>
 <a href="{{ path('sort_filter_type_log', {'sort': "desc", 'filter': "all", 'filter_type': "security"}) }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row">
         <div class="col-md-12 col-xs-12">
-            Latest Security <span class="badge" id="logTotal-Security">{{ activeSecurityLogs() }}</span>
+            Latest Security <span class="badge" id="logTotal-Security">{{ activeSecurityLogs(app.user.id) }}</span>
         </div>
     </div>
 </a>
 <a href="{{ path('sort_filter_type_log', {'sort': "desc", 'filter': "all", 'filter_type': "lost"}) }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row">
         <div class="col-md-12 col-xs-12">
-            Latest Lost Property <span class="badge" id="logTotal-Lost">{{ activeLostPropertyLogs() }}</span>
+            Latest Lost Property <span class="badge" id="logTotal-Lost">{{ activeLostPropertyLogs(app.user.id) }}</span>
         </div>
     </div>
 </a>
