--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -213,11 +213,11 @@
         });
 
         $.getJSON('{{ path('log_json_data') }}', function(data) {
-            //$('#logTotal-Total').html(data['Total']);
-            //$('#logTotal-Open').html(data['Open']);
-            //$('#logTotal-Medical').html(data['Medical']);
-            //$('#logTotal-Security').html(data['Security']);
-            //$('#logTotal-Lost').html(data['Lost']);
+            $('#logTotal-Total').html(data['Total']);
+            $('#logTotal-Open').html(data['Open']);
+            $('#logTotal-Medical').html(data['Medical']);
+            $('#logTotal-Security').html(data['Security']);
+            $('#logTotal-Lost').html(data['Lost']);
         });
         
         i++;
