--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -201,8 +201,8 @@
         $.getJSON('{{ path('venue_json_data') }}', function(data) {
             $.each(data, function(index, venue) {
                 //Calculate current occupancy
-                //var count = venue['count'].running_count_in - venue['count'].running_count_out;
-                //$('#venue-'+venue.id).html(venue.name + ": "+ count);
+                var count = venue['count'].running_count_in - venue['count'].running_count_out;
+                $('#venue-'+venue.id).html(venue.name + ": "+ count);
                 if(venue.status === "false"){
                     //console.log("old!");
                    $('#venue-'+venue.id).addClass("flash");
