--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -200,17 +200,19 @@
 
         $.getJSON('{{ path('venue_json_data') }}', function(data) {
             $.each(data, function(index, venue) {
-                //Calculate current occupancy
-                var count_in = venue['count'].running_count_in;
-                var count_out = venue['count'].running_count_out;
-                var count =  count_in - count_out;
-                $('#venue-'+venue.id).html(venue.name + ": "+ count);
-                if(venue.status === "false"){
-                    //console.log("old!");
-                   $('#venue-'+venue.id).addClass("flash");
-                }else{
-                   $('#venue-'+venue.id).removeClass("flash");
-               }
+                if(venue['count'].running_count_in) {
+                    //Calculate current occupancy
+                    var count_in = venue['count'].running_count_in;
+                    var count_out = venue['count'].running_count_out;
+                    var count = count_in - count_out;
+                    $('#venue-' + venue.id).html(venue.name + ": " + count);
+                    if (venue.status === "false") {
+                        //console.log("old!");
+                        $('#venue-' + venue.id).addClass("flash");
+                    } else {
+                        $('#venue-' + venue.id).removeClass("flash");
+                    }
+                }
             });
         });
 
