--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -11,6 +11,7 @@
 <div class="row">
     <h4>Log Functions</h4>
 </div>
+{% if activeEventName(app.user.id)  is not null %}
 <a href="{{ path('new_entry') }}" class="btn btn-primary btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row" data-toggle="tooltip" data-placement="right" title="ctrl-e">
         <div class="col-md-12 col-xs-12">
@@ -53,6 +54,9 @@
         </div>
     </div>
 </a>
+{% else %}
+No Event Assigned
+{% endif %}
 <br>
 <div class="panel panel-info">
     <div class="panel-heading">
