--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -11,7 +11,7 @@
 <div class="row">
     <h4>Log Functions</h4>
 </div>
-{% if activeEventName(app.user.id)  is not null %}
+{% if activeEventName(app.user.id) | length > 0 %}
 <a href="{{ path('new_entry') }}" class="btn btn-primary btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row" data-toggle="tooltip" data-placement="right" title="ctrl-e">
         <div class="col-md-12 col-xs-12">
@@ -219,7 +219,7 @@ No Event Assigned
                 }
             });
         });
-
+    {% if activeEventName(app.user.id) | length > 0 %}
         $.getJSON('{{ path('log_json_data') }}', function(data) {
             $('#logTotal-Total').html(data['Total']);
             $('#logTotal-Open').html(data['Open']);
@@ -227,7 +227,7 @@ No Event Assigned
             $('#logTotal-Security').html(data['Security']);
             $('#logTotal-Lost').html(data['Lost']);
         });
-        
+    {% endif %}    
         i++;
         setTimeout(sidebarPoll,2000);
     }
