--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -55,9 +55,11 @@
     </div>
 </a>
 {% else %}
-No Event Assigned
+<strong>Not assigned to an active event</strong>
 {% endif %}
-<br>
+<div class="row">
+    <h4>Event Info</h4>
+</div>
 <div class="panel panel-info">
     <div class="panel-heading">
         Current Occupancy
