--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -58,7 +58,7 @@
 <strong>Not assigned to an active event</strong>
 {% endif %}
 <div class="row">
-    <h4>Event Info</h4>
+    <h4>Status</h4>
 </div>
 <div class="panel panel-info">
     <div class="panel-heading">
