--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -6,6 +6,7 @@
         <strong>{{ activeEventName(app.user.id) }}</strong>
         <br>
         User: {{ app.user.username }}
+        Role: {{ app.user.group }}
     </div>
 </div>
 <div class="row">
@@ -57,6 +58,7 @@
 {% else %}
 <strong>Not assigned to an active event</strong>
 {% endif %}
+{% if is_granted('ROLE_USER') %}
 <div class="row">
     <h4>Status</h4>
 </div>
@@ -83,11 +85,13 @@
 <div class="row">
         <h4>Operator Functions</h4>
 </div>
+{% if is_granted('ROLE_ADMIN') %}
 <a href="{{ path('user_registration') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row">
         New Operator
     </div>
 </a>
+{% endif %}
 <a href="{{ path('user_update') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row">
         Update User Details
@@ -110,16 +114,19 @@
     </div>
 </a>
 {% endif %}
+{% if is_granted('ROLE_ADMIN') %}
 <a href="{{ path('event_list') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row">
         Event System
     </div>
 </a>
+{% endif %}
 <a href="{{ path('peoplecounting') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row">
     People Counting
     </div>
 </a>
+{% endif %}
 <div class="row">
         <h4>Files & Information</h4>
 </div>
@@ -128,6 +135,7 @@
         Code of Practice
     </div>
 </a>
+{% if is_granted('ROLE_USER') %}
 <div class="row">
         <h4>Control Room Functions</h4>
 </div>
@@ -146,6 +154,7 @@
         Lighting Off
     </div>
 </div>
+{% endif %}
 <br>
 <script type="text/javascript">
     $(document).ready(function() {
