--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -6,7 +6,7 @@
         <strong>{{ activeEventName(app.user.id) }}</strong>
         <br>
         User: {{ app.user.username }}
-        Role: {{ app.user.group }}
+        Role: {{ app.user.group.name }}
     </div>
 </div>
 <div class="row">
