Event List activate change

--- a/app/Resources/views/eventList.html.twig
+++ b/app/Resources/views/eventList.html.twig
@@ -38,7 +38,8 @@ Events Settings
                                             <td>{{ event.client }}</td>
                                             <td>{{ event.event_log_start_date|date('Y-m-d H:i', "Europe/London") }}</td>
                                             <td>{{ event.event_log_stop_date|date('Y-m-d H:i', "Europe/London") }}</td>
-                                            <td>{% if event.event_active %}
+                                            <td>
+                                                {% if date(event.event_log_start_date) < date() and  date(event.event_log_stop_date) > date()%}
                                                     <span class="glyphicon glyphicon-ok" aria-hidden="true" aria-label="Active"></span> 
                                                 {% else %}
                                                     <a href="{{ path('activate_event', {'activateId': event.id}) }}">Activate</a>
