--- a/app/Resources/views/login.html.twig
+++ b/app/Resources/views/login.html.twig
@@ -11,7 +11,7 @@ Control Room Login
                 <div class="row">
                     <div class="col-md-12">
                         {% if error %}
-                            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div><br>
                         {% endif %}
                     </div>
                 </div>
@@ -19,20 +19,20 @@ Control Room Login
                 <div class="row">
                     <div class="form-group">
                         <div class="col-md-1">               
-                            <label for="username">Username:</label>
+                            <label for="username" class="required">Username:</label>
                         </div>
                         <div class="col-md-2">                             
-                            <input type="text" id="username" name="_username" value="{{ last_username }}" />
+                            <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" />
                         </div>
                     </div>
                 </div><br>
                 <div class="row">
                     <div class="form-group">
                         <div class="col-md-1">                          
-                            <label for="password">Password:</label>
+                            <label for="password" class="required">Password:</label>
                         </div>
                         <div class="col-md-2">                 
-                            <input type="password" id="password" name="_password" />
+                            <input type="password" id="password" name="_password" class="form-control" />
                         </div>
                     </div>
                 </div><br>
