--- a/app/Resources/views/pdfSummary.html.twig
+++ b/app/Resources/views/pdfSummary.html.twig
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <h3>Logs recorded between {{ event.event_log_start_date|date('Y-m-d H:i:s', "Europe/London") }} and {{ event.event_log_stop_date|date('Y-m-d H:i:s', "Europe/London") }}</h3>
+            <h3>Logs recorded between {{ event.eventLogStartDate|date('Y-m-d H:i:s', "Europe/London") }} and {{ event.eventLogStopDate|date('Y-m-d H:i:s', "Europe/London") }}</h3>
             <div class="row">
                 <strong>Total Recorded Individual Logs: </strong>{{ eventTotalLogs(event.id) }}
             </div>
