adding css to pdf

--- a/app/Resources/views/pdfSummary.html.twig
+++ b/app/Resources/views/pdfSummary.html.twig
@@ -1,4 +1,8 @@
-<link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}">
+<html>
+    <head>
+        <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}">
+    </head>
+    <body>
 <div class="wrapper">
     <div class="row">
         <div class="col-md-12">
@@ -26,3 +30,5 @@
         </div>
     </div>
 </div>
+    </body>
+</html>
