--- a/app/Resources/views/pdfRegister.html.twig
+++ b/app/Resources/views/pdfRegister.html.twig
@@ -1,39 +1,45 @@
 {# app/Resources/views/pdfRegister.html.twig #}
-<link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}">
-<div class="wrapper">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>{{ event.name }} Event Control</h1>
-            <h2>Crew Register</h2>
-            {{ event.client }}<br>
-            Report Produced: {{ "now"|date('Y-m-d H:i:s', "Europe/London") }}
-            <br>
+<html>
+    <head>
+        <link rel="stylesheet" href="{{ app.request.getSchemeAndHttpHost() ~ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}">
+    </head>
+    <body>
+        <div class="wrapper">
             <div class="row">
-                <table class="table table-striped">
-                    <tbody>
-                        <tr>
-                            <td><strong>Name</strong></td>
-                            <td><strong>Phone</strong></td>
-                            <td><strong>Email</strong></td>
-                            <td><strong>Time In</strong></td>
-                            <td><strong>Time Out</strong></td>
-                        </tr>
-                        {% for attendee in attendees %}
-                            <tr>
-                                <td>{{ attendee.name }}</td>
-                                <td>{{ attendee.phone }}</td>
-                                <td>{{ attendee.email }}</td>
-                                <td>{{ attendee.time_in|date('Y-m-d H:i:s', "Europe/London") }}</td>
-                                {% if attendee.time_out is null %}
-                                    <td>Not signed out</td>
-                                {% else %}
-                                <td>{{ attendee.time_out|date('Y-m-d H:i:s', "Europe/London") }}</td>
-                                {% endif %}
-                            </tr>
-                        {% endfor %}                           
-                    </tbody>
-                </table>
+                <div class="col-md-12">
+                    <h1>{{ event.name }} Event Control</h1>
+                    <h2>Crew Register</h2>
+                    {{ event.client }}<br>
+                    Report Produced: {{ "now"|date('Y-m-d H:i:s', "Europe/London") }}
+                    <br>
+                    <div class="row">
+                        <table class="table table-striped">
+                            <tbody>
+                                <tr>
+                                    <td><strong>Name</strong></td>
+                                    <td><strong>Phone</strong></td>
+                                    <td><strong>Email</strong></td>
+                                    <td><strong>Time In</strong></td>
+                                    <td><strong>Time Out</strong></td>
+                                </tr>
+                                {% for attendee in attendees %}
+                                    <tr>
+                                        <td>{{ attendee.name }}</td>
+                                        <td>{{ attendee.phone }}</td>
+                                        <td>{{ attendee.email }}</td>
+                                        <td>{{ attendee.time_in|date('Y-m-d H:i:s', "Europe/London") }}</td>
+                                        {% if attendee.time_out is null %}
+                                            <td>Not signed out</td>
+                                        {% else %}
+                                        <td>{{ attendee.time_out|date('Y-m-d H:i:s', "Europe/London") }}</td>
+                                        {% endif %}
+                                    </tr>
+                                {% endfor %}                           
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-</div>         
+        </div>         
+    </body>
+</html>
