--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -5,7 +5,7 @@
     <body>
         <div class="wrapper">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-11 col-md-offset-1">
                     <h1>{{ event.name }} Event Control</h1>
                     {{ event.client }}<br>
                     Report Produced: {{ "now"|date('Y-m-d H:i:s', "Europe/London") }}
@@ -13,14 +13,16 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-11 col-md-offset-1">
                     <h3>Log Information</h3>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-12">
                             <strong>Operator:</strong><br>
                             {{ entry.operator }}
                         </div>
-                        <div class="col-md-6">
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
                             <strong>Log Open Time (Submit Timestamp):</strong><br>
                             {{ entry.logEntryOpenTime|date('Y-m-d H:i:s', "Europe/London")}} ({{ entry.logTimestamp|date('Y-m-d H:i:s', "Europe/London") }})
                         </div>
