--- a/app/Resources/views/pdfSummary.html.twig
+++ b/app/Resources/views/pdfSummary.html.twig
@@ -5,7 +5,7 @@
     <body>
         <div class="wrapper">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-11 col-md-offset-1">
                     <h1>{{ event.name }} Event Control</h1>
                     {{ event.client }}<br>
                     Report Produced: {{ "now"|date('Y-m-d H:i:s', "Europe/London") }}
@@ -13,7 +13,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-11 col-md-offset-1">
                     <h3>Logs recorded between {{ event.eventLogStartDate|date('Y-m-d H:i:s', "Europe/London") }} and {{ event.eventLogStopDate|date('Y-m-d H:i:s', "Europe/London") }}</h3>
                     <div class="row">
                         <strong>Total Recorded Individual Logs: </strong>{{ eventTotalLogs(event.id) }}
