--- a/app/Resources/views/pdfSummary.html.twig
+++ b/app/Resources/views/pdfSummary.html.twig
@@ -5,7 +5,7 @@
     <body>
         <div class="wrapper">
             <div class="row">
-                <div class="col-md-11 col-md-offset-1">
+                <div class="col-md-12">
                     <h1>{{ event.name }} Event Control</h1>
                     {{ event.client }}<br>
                     Report Produced: {{ "now"|date('Y-m-d H:i:s', "Europe/London") }}
