--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -13,7 +13,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-11 col-md-offset-1">
+                <div class="col-md-12">
                     <h3>Log Information</h3>
                     <div class="row">
                         <div class="col-md-12">
