--- a/app/Resources/views/pdfSummary.html.twig
+++ b/app/Resources/views/pdfSummary.html.twig
@@ -13,7 +13,9 @@
                 </div>
             </div>
             <div class="col-md-12">
-                <h3>Logs recorded between {{ event.eventLogStartDate|date('Y-m-d H:i:s', "Europe/London") }} and {{ event.eventLogStopDate|date('Y-m-d H:i:s', "Europe/London") }}</h3>
+                <div class="row">
+                    <h4>Logs recorded between {{ event.eventLogStartDate|date('Y-m-d H:i:s', "Europe/London") }} and {{ event.eventLogStopDate|date('Y-m-d H:i:s', "Europe/London") }}</h4>
+                </div>
                 <div class="row">
                     <strong>Total Recorded Individual Logs: </strong>{{ eventTotalLogs(event.id) }}
                 </div>
