pdf template adjustment

--- a/app/Resources/views/pdfSummary.html.twig
+++ b/app/Resources/views/pdfSummary.html.twig
@@ -18,7 +18,7 @@
                 </div>
                 <div class="row">
                     <ul class="list-group">
-                        <li class="list-group-item-acive">
+                        <li class="list-group-item">
                             <strong>Total Recorded Individual Logs: </strong>{{ eventTotalLogs(event.id) }}
                         </li>
                         <li class="list-group-item">
