--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="{{ app.request.getSchemeAndHttpHost() ~ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}">
+        <link rel="stylesheet" href="http://eventcontrol.nb221.com/assets/vendor/bootstrap/dist/css/bootstrap.css">
     </head>
     <body>
         <div class="wrapper">
