--- a/app/Resources/views/pdfSummary.html.twig
+++ b/app/Resources/views/pdfSummary.html.twig
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="../web/assets/vendor/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="/../web/assets/vendor/bootstrap/dist/css/bootstrap.min.css">
     </head>
     <body>
         <div class="wrapper">
