--- a/app/Resources/views/pdfSummary.html.twig
+++ b/app/Resources/views/pdfSummary.html.twig
@@ -33,6 +33,12 @@
                     </ul>
                 </div>
             </div>
+            <div class="panel panel-primary">
+                <div class="panel-body">
+                    Panel content
+                </div>
+                <div class="panel-footer">Panel footer</div>
+            </div>
         </div>
     </body>
 </html>
